@@ -1,3 +1,8 @@
+2012-02-17 Philipp Klaus Krause <pkk AT spth.de>
+
+	* support/regression/tests/gcc-torture-execute-pr37924.c:
+	  Fix gcc compilation failure.
+
 2012-02-16 Philipp Klaus Krause <pkk AT spth.de>
 
 	* src/z80/peeph-r2k.def:
